@startuml
hide stereotype  
skinparam class {
	BackgroundColor White
	ArrowColor Black
	BorderColor Black
}

namespace fsm.ecore <<Frame>>  {

  class FSM {
    name : String
    initialState : State
    finalState : State
  }
  class State{
    name : String
    incommingTransition : Transition
  }
	class Transition{
		input : String
		target : State
	}
	FSM *-- State : ownedStates
	State *-- Transition : outgoingTransitions
}

note "ecore file" as N1
N1 .. fsm.ecore
 
namespace fsm.melange <<Cloud>> #PaleGreen-white {
	namespace fsm  #white {
	  class FSM {
	    name : String
	    initialState : State
	    finalState : State
	  }
	  class State{
	    name : String
	    incommingTransition : Transition
	  }
		class Transition{
			input : String
			target : State
		}
		FSM *-- State : ownedStates
		State *-- Transition : outgoingTransitions
	}
}

note "java implementation of the ecore is\nreused in the language implementation" as N2
N2 .. fsm.melange.fsm


namespace fsm.k3dsa   {
    class FSMAspect << (@,#FF7700) Aspect >>{
	    currentState : State
	    run()
	}
	class StateAspect << (@,#FF7700) Aspect >>{
	    step()
	}
	class TransitionAspect << (@,#FF7700) Aspect >>{
	    fire()
	}
}

note "aspects extending the\njava implementation" as N3
N3 .. fsm.k3dsa

fsm.melange.fsm.FSM .. fsm.k3dsa.FSMAspect  : <
fsm.melange.fsm.State .. fsm.k3dsa.StateAspect  : <
fsm.melange.fsm.Transition .. fsm.k3dsa.TransitionAspect  : <

namespace xsfsm.melange <<Cloud>> #PaleGreen-white {
	namespace fsm  #LightGray-white {
	  class FSM {
	    name : String
	    initialState : State
	    finalState : State
	    currentState : State
	    run()
	  }
	  class State{
	    name : String
	    incommingTransition : Transition
	    step()
	  }
	  class Transition{
	    input : String
	    target : State
	    fire()
	  }
	  FSM *-- State : ownedStates
	  State *-- Transition : outgoingTransitions
	}
}

note "generated ecore and java implementation (including aspect)\nfor the new language" as N4
N4 .. xsfsm.melange.fsm

fsm.melange --> fsm.ecore : syntax (legacy)
fsm.melange <-- xsfsm.melange : inherits
xsfsm.melange *-- fsm.k3dsa : with
@enduml